[gd_scene load_steps=8 format=3 uid="uid://y1r6gu0qhg4d"]

[ext_resource type="Script" uid="uid://dvqv56vpkrud8" path="res://scenes/rope.gd" id="1_41ebb"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_6qqg3"]
height = 1.0
radius = 0.1

[sub_resource type="CylinderMesh" id="CylinderMesh_vxxgh"]
top_radius = 0.1
bottom_radius = 0.1
height = 1.0

[sub_resource type="SphereShape3D" id="SphereShape3D_4qwev"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dkikf"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="SphereMesh" id="SphereMesh_6nt6k"]
material = SubResource("StandardMaterial3D_dkikf")

[sub_resource type="SphereShape3D" id="SphereShape3D_dnq2c"]
radius = 1.0

[node name="Rope" type="PinJoint3D"]
node_b = NodePath("Rope_Rigid")
script = ExtResource("1_41ebb")

[node name="Rope_Rigid" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.6, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Rope_Rigid"]
shape = SubResource("CylinderShape3D_6qqg3")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Rope_Rigid"]
mesh = SubResource("CylinderMesh_vxxgh")

[node name="PinJoint3D" type="PinJoint3D" parent="Rope_Rigid"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.3, 0)
node_a = NodePath("..")
node_b = NodePath("Rope_Rigid")

[node name="Rope_Rigid" type="RigidBody3D" parent="Rope_Rigid/PinJoint3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Rope_Rigid/PinJoint3D/Rope_Rigid"]
shape = SubResource("CylinderShape3D_6qqg3")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Rope_Rigid/PinJoint3D/Rope_Rigid"]
mesh = SubResource("CylinderMesh_vxxgh")

[node name="PinJoint3D" type="PinJoint3D" parent="Rope_Rigid/PinJoint3D/Rope_Rigid"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.3, 0)
node_a = NodePath("..")
node_b = NodePath("Rope_Rigid")

[node name="Rope_Rigid" type="RigidBody3D" parent="Rope_Rigid/PinJoint3D/Rope_Rigid/PinJoint3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Rope_Rigid/PinJoint3D/Rope_Rigid/PinJoint3D/Rope_Rigid"]
shape = SubResource("CylinderShape3D_6qqg3")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Rope_Rigid/PinJoint3D/Rope_Rigid/PinJoint3D/Rope_Rigid"]
mesh = SubResource("CylinderMesh_vxxgh")

[node name="PinJoint3D" type="PinJoint3D" parent="Rope_Rigid/PinJoint3D/Rope_Rigid/PinJoint3D/Rope_Rigid"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.3, 0)
node_a = NodePath("..")
node_b = NodePath("Connection_Point")

[node name="Connection_Point" type="RigidBody3D" parent="Rope_Rigid/PinJoint3D/Rope_Rigid/PinJoint3D/Rope_Rigid/PinJoint3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.2, 0)
mass = 10.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Rope_Rigid/PinJoint3D/Rope_Rigid/PinJoint3D/Rope_Rigid/PinJoint3D/Connection_Point"]
shape = SubResource("SphereShape3D_4qwev")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Rope_Rigid/PinJoint3D/Rope_Rigid/PinJoint3D/Rope_Rigid/PinJoint3D/Connection_Point"]
mesh = SubResource("SphereMesh_6nt6k")

[node name="Connection_Joint" type="PinJoint3D" parent="Rope_Rigid/PinJoint3D/Rope_Rigid/PinJoint3D/Rope_Rigid/PinJoint3D/Connection_Point"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0999999, 0)
node_a = NodePath("..")

[node name="Connection_Point_Area" type="Area3D" parent="Rope_Rigid/PinJoint3D/Rope_Rigid/PinJoint3D/Rope_Rigid/PinJoint3D/Connection_Point"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.2, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Rope_Rigid/PinJoint3D/Rope_Rigid/PinJoint3D/Rope_Rigid/PinJoint3D/Connection_Point/Connection_Point_Area"]
shape = SubResource("SphereShape3D_dnq2c")

[connection signal="body_entered" from="Rope_Rigid/PinJoint3D/Rope_Rigid/PinJoint3D/Rope_Rigid/PinJoint3D/Connection_Point/Connection_Point_Area" to="." method="_on_connection_point_area_body_entered"]
